# anomaly-detection-rl

./: .gitattributes  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: baseline_agent.py  llm_agent.py
data/: easy.json  hard.json  medium.json
env/: environment.py  grader.py  tasks.py
frontend/: index.html
server/: app.py
