[project]
name = "anomaly-detection"
version = "0.1.0"
description = "AI safety prompt injection detection system"
authors = [{ name = "Parth" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["agent", "env"]